# playground-point-in-polygon-simd-rs

./: Cargo.toml  README.md
.cargo/: config.toml
benches/: benchmark.rs
src/: c_api.rs  edge_tree.rs  interval_tree.rs  lib.rs  pnpoly.rs
