[package]
name = "point_in_polygon"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rand_xoshiro = "0.6.0"
rand = "0.8.5"
criterion = "0.5.1"


[[bench]]
name = "benchmark"
harness = false
